--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -13,29 +13,26 @@
 		{{else if opuslinkLoadResult}}
 			{{#if opuslinkLoadResult.link_status}}
 				<div class="directoryopus-link-statrefdiv">
-					<div>
-						<div class="directoryopus-link-linked">
-							<p class="directoryopus-link-linkmain"><span class="directoryopus-link-linkheading">Your forum account is <span class="directoryopus-link-linkstatus">linked</span>:</span> <span class="directoryopus-link-versionsummary">Registered <span class="directoryopus-link-program">Directory Opus</span> <span class="directoryopus-link-version">{{opuslinkLoadResult.link_version}}</span> <span class="{{opuslinkLoadResult.link_edition_class}}">{{opuslinkLoadResult.link_edition}}</span> user.</span></p>
-							{{#if opuslinkLoadResult.link_reg_code_redacted}}
-								<p class="directoryopus-link-detailregcode">Registration Code: {{opuslinkLoadResult.link_reg_code_redacted}}</p>
-							{{/if}}
-							{{#if opuslinkLoadResult.link_reg_date}}
-								<p class="directoryopus-link-detailregdate">Registration Date: {{opuslinkLoadResult.link_reg_date}}</p>
-							{{/if}}
-						</div>
-						{{#if opuslinkAjaxPending}}
-							<p class="directoryopus-link-loading">...Please Wait...</p>
+					<div class="directoryopus-link-linked">
+						<p class="directoryopus-link-linkmain"><span class="directoryopus-link-linkheading">Your forum account is <span class="directoryopus-link-linkstatus">linked</span>:</span> <span class="directoryopus-link-versionsummary">Registered <span class="directoryopus-link-program">Directory Opus</span> <span class="directoryopus-link-version">{{opuslinkLoadResult.link_version}}</span> <span class="{{opuslinkLoadResult.link_edition_class}}">{{opuslinkLoadResult.link_edition}}</span> user.</span></p>
+						{{#if opuslinkLoadResult.link_reg_code_redacted}}
+							<p class="directoryopus-link-detailregcode">Registration Code: {{opuslinkLoadResult.link_reg_code_redacted}}</p>
 						{{/if}}
-						{{#if opuslinkLoadResult.remote_error}}
-							<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">{{opuslinkLoadResult.remote_error}}</span></p>
+						{{#if opuslinkLoadResult.link_reg_date}}
+							<p class="directoryopus-link-detailregdate">Registration Date: {{opuslinkLoadResult.link_reg_date}}</p>
 						{{/if}}
 					</div>
 					<div class="directoryopus-link-butref">
-						<p class="directoryopus-link-refresh"><button {{action "onOpusLinkRefresh"}} disabled={{opuslinkAjaxPending}} class="btn btn-primary" title="{{opuslinkLoadResult.link_refresh_details_title}}">{{opuslinkLoadResult.link_refresh_details_title}}</button></p>
+						<p class="directoryopus-link-refresh"><button {{action "onOpusLinkRefresh"}} disabled={{opuslinkAjaxPending}} class="btn btn-primary" title="{{opuslinkLoadResult.link_refresh_details_title}}">{{#if opuslinkAjaxPending}}<i class="fa fa-refresh fa-fw fa-spin"></i>{{else}}<i class="fa fa-refresh fa-fw"></i>{{/if}} {{opuslinkLoadResult.link_refresh_details_title}}</button></p>
 						{{#if opuslinkLoadResult.link_last_refreshed}}
 							<p class="directoryopus-link-lastrefresh"><span class="directoryopus-nowrap">Last refreshed</span> <span class="directoryopus-nowrap">{{opuslinkLoadResult.link_last_refreshed}}</span></p>
 						{{/if}}
 					</div>
+				</div>
+				<div class="directoryopus-inlineblock">
+					{{#if opuslinkLoadResult.remote_error}}
+						<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">{{opuslinkLoadResult.remote_error}}</span></p>
+					{{/if}}
 				</div>
 			{{else}}
 				<p class="directoryopus-link-unlinked">Your forum account is <b>not</b> linked to a registered Directory Opus licence.</p>
@@ -43,11 +40,8 @@
 				<form class="directoryopus-link-form">
 					<div class="directoryopus-link-inputs">
 						<label>Directory Opus registration code: {{input enter="onOpusLinkSubmitRegCode" value=opuslinkRegCodeInput placeholder="e.g. ABC12-DE3FG-4HIJ5-KL6M7" title="Enter your Directory Opus registration code. e.g. ABC12-DE3FG-4HIJ5-KL6M7" pattern="\s*[A-Za-z0-9]{5}-?[A-Za-z0-9]{5}-?[A-Za-z0-9]{5}-?[A-Za-z0-9]{5}\s*" size="32" autocomplete="off" autocorrect="off" autocapitalize="off" required="true"}}</label>
-						<button {{action "onOpusLinkSubmitRegCode"}} disabled={{opuslinkAjaxPending}} class="btn btn-primary" title="Submit">Submit</button>
+						<button {{action "onOpusLinkSubmitRegCode"}} disabled={{opuslinkAjaxPending}} class="btn btn-primary" title="Submit">{{#if opuslinkAjaxPending}}<i class="fa fa-spinner fa-fw fa-spin"></i>{{else}}<i class="fa fa-check fa-fw"></i>{{/if}} Submit</button>
 					</div>
-					{{#if opuslinkAjaxPending}}
-						<p class="directoryopus-link-loading">...Please Wait...</p>
-					{{/if}}
 					{{#if opuslinkLoadResult.remote_error}}
 						<p class="directoryopus-link-loaderror">
 							<span class="directoryopus-link-errorheading">Error:</span>
