--- a/assets/javascripts/discourse/templates/connectors/user-card-post-names/directoryopus-link-status-card.hbs
+++ b/assets/javascripts/discourse/templates/connectors/user-card-post-names/directoryopus-link-status-card.hbs
@@ -2,7 +2,7 @@
 	{{#if opusLinkAnything}}
 		<div class="directoryopus-link-status">
 			{{#if opusCanLinkUser}}
-				<span class="opus-nav-pills">{{#link-to 'linkopus'}}<img class="link-opus-button-icon" src="/plugins/discourse-directoryopus/images/opus_icon.png">{{i18n 'directoryopus.linkopus_title'}}{{/link-to}}</span>
+				<span class="opus-nav-pills">{{#link-to 'linkopus' user}}<img class="link-opus-button-icon" src="/plugins/discourse-directoryopus/images/opus_icon.png">{{i18n 'directoryopus.linkopus_title'}}{{/link-to}}</span>
 			{{/if}}
 			{{#if opusLinkClass}}
 				<span class="{{opusLinkClass}}">{{fa-icon opusLinkIcon}} {{opusLinkText}}</span>
