--- a/assets/javascripts/discourse/templates/user/connectors/user-profile-primary/directoryopus-link-status-profile.hbs
+++ b/assets/javascripts/discourse/templates/user/connectors/user-profile-primary/directoryopus-link-status-profile.hbs
@@ -1,11 +1,11 @@
 {{#if siteSettings.directoryopus_enabled}}
 	{{#if opusLinkAnything}}
 		<div class="directoryopus-link-status">
-			{{#if opusCanLinkUser}}
-				<span class="opus-nav-pills">{{#link-to 'linkopus'}}<img class="link-opus-button-icon" src="/plugins/discourse-directoryopus/images/opus_icon.png">{{i18n 'directoryopus.linkopus_title'}}{{/link-to}}</span>
-			{{/if}}
 			{{#if opusLinkClass}}
-				<span class="{{opusLinkClass}}">{{fa-icon opusLinkIcon}} {{opusLinkText}}</span>
+				<div class="{{opusLinkClass}}">{{fa-icon opusLinkIcon}} {{opusLinkText}}</div>
+			{{/if}}
+			{{#if opusCanLinkUser}}
+				<div class="opus-nav-pills">{{#link-to 'linkopus'}}<img class="link-opus-button-icon" src="/plugins/discourse-directoryopus/images/opus_icon.png">{{i18n 'directoryopus.linkopus_title'}}{{/link-to}}</div>
 			{{/if}}
 		</div>
 	{{/if}}
