--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -3,8 +3,6 @@
 	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
 
 	{{#if model}}
-		<p><button {{action "onOpusLinkClearLocal"}} class="btn" title="Clear Local">Clear Local (TODO: Remove This Button)</button></p>
-
 		{{#if opuslinkLoadError}}
 			{{#if opuslinkAjaxPending}}
 				<p class="directoryopus-link-loading">...Please Wait...</p>
@@ -38,6 +36,13 @@
 						<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">{{opuslinkLoadResult.remote_error}}</span></p>
 					{{/if}}
 				</div>
+				{{#if opuslinkClearIsAdmin}}
+					<div class="directoryopus-link-clear">
+						<p><b>Admin Only:</b></p>
+						<p><button {{action "onOpusLinkClearLocal"}} disabled={{opuslinkClearSafety}} class="btn btn-primary" title="Clear Local"><i class="fa fa-trash fa-fw"></i> Clear Local</button> <label class="directoryopus-link-clearsafety">{{input type="checkbox" checked=opuslinkClearSafety class="toggle"}} Safety</label></p>
+						<p>(This clears the forum side link for the user, but not the other side.)</p>
+					</div>
+				{{/if}}
 			{{else}}
 				<p class="directoryopus-link-unlinked">Your forum account is <b>not</b> linked to a registered Directory Opus licence.</p>
 				<p>To link your account:</p>
@@ -63,7 +68,16 @@
 						<li>You can normally find your registration code via the program itself.
 							<label class="directoryopus-link-showme">{{input type="checkbox" checked=opuslinkRegCodeShowMe class="toggle"}} Show Me</label>
 							{{#if opuslinkRegCodeShowMe}}
-								<p>(TODO: Add video here)</p>
+								<ol>
+									<li>Select <b>Help &gt; Licence Manager</b> near the top-right of the default lister toolbars.</li>
+									<li>Select <b>Current Certificate Status</b> on the left.</li>
+									<li>Select <b><i>Click to reveal details</i></b> and accept the UAC prompt.</li>
+									<li>Click the <b>Copy</b> button. Your registration code will now be in the clipboard.</li>
+								</ol>
+								<video width="640" height="360" controls>
+									<source src="/plugins/discourse-directoryopus/images/opus-link-reg.mp4" type="video/mp4">
+									(Video not supported in your browser.)
+								</video>
 							{{/if}}
 						</li>
 						<li>Free evaluation codes cannot be linked.</li>
