Changed da-icon to f-icon for newer DIscourse

--- a/assets/javascripts/discourse/templates/connectors/user-card-post-names/directoryopus-link-status-card.hbs
+++ b/assets/javascripts/discourse/templates/connectors/user-card-post-names/directoryopus-link-status-card.hbs
@@ -2,7 +2,7 @@
 	{{#if opusLinkAnything}}
 		<div class="directoryopus-link-status">
 			{{#if opusLinkClass}}
-				<span class="{{opusLinkClass}}">{{fa-icon opusLinkIcon}} {{opusLinkText}}</span>
+				<span class="{{opusLinkClass}}">{{d-icon opusLinkIcon}} {{opusLinkText}}</span>
 			{{/if}}
 		</div>
 	{{/if}}
