--- a/assets/javascripts/discourse/templates/connectors/composer-fields/directoryopus-composer-help.hbs
+++ b/assets/javascripts/discourse/templates/connectors/composer-fields/directoryopus-composer-help.hbs
@@ -2,7 +2,7 @@
 	{{#if siteSettings.directoryopus_composer_help_title}}
 		{{#if siteSettings.directoryopus_composer_help_url}}
 			<div class="directoryopus-composer-help">
-				<a href="{{siteSettings.directoryopus_composer_help_url}}">{{fa-icon 'info-circle'}} {{siteSettings.directoryopus_composer_help_title}}</a>
+				<a href="{{siteSettings.directoryopus_composer_help_url}}">{{d-icon 'info-circle'}} {{siteSettings.directoryopus_composer_help_title}}</a>
 			</div>
 		{{/if}}
 	{{/if}}
