--- a/assets/javascripts/discourse/templates/user/connectors/user-profile-primary/directoryopus-link-status-profile.hbs
+++ b/assets/javascripts/discourse/templates/user/connectors/user-profile-primary/directoryopus-link-status-profile.hbs
@@ -2,7 +2,7 @@
 	{{#if opusLinkAnything}}
 		<div class="directoryopus-link-status">
 			{{#if opusLinkClass}}
-				<div class="{{opusLinkClass}}">{{fa-icon opusLinkIcon}} {{opusLinkText}}</div>
+				<div class="{{opusLinkClass}}">{{d-icon opusLinkIcon}} {{opusLinkText}}</div>
 			{{/if}}
 			{{#if opusCanLinkUser}}
 				<div class="opus-nav-pills">{{#link-to 'linkopus'}}<img class="link-opus-button-icon" src="/plugins/discourse-directoryopus/images/opus_icon.png">{{i18n 'directoryopus.linkopus_title'}}{{/link-to}}</div>
