Fixed page layout in new Discourse version.

--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -1,3 +1,4 @@
+<div class="user-content">
 <div class="directoryopus-link-body">
 
 	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
@@ -149,4 +150,5 @@
 		<li>Linking gives your requests a boost but does not guarantee when or if they will be implemented.</li>
 		<li>The forum's <a href="/faq">Guidelines</a> and <a href="/tos">Terms of Service</a> still apply.</li>
 	</ul>
+</div>
 </div>
