--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -1,150 +1,7 @@
 <div class="user-content">
 <div class="directoryopus-link-body">
 
-	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
+<p>This page is temporarily non-functional to diagnose a problem.</p>
 
-	{{#if model}}
-		{{#if opuslinkLoadError}}
-			{{#if opuslinkAjaxPending}}
-				<p class="directoryopus-link-loading">...Please Wait...</p>
-			{{/if}}
-			<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">{{opuslinkLoadError}}</span></p>
-		{{else if opuslinkLoadResult}}
-			{{#if opuslinkLoadResult.link_status}}
-				{{#if opuslinkIsAdmin}}
-					<div class="directoryopus-link-admin">
-						<p><b>Admin Only</b></p>
-						<p class="directoryopus-link-linkid">Link ID: {{opuslinkLoadResult.link_id}}</p>
-						<p><button {{action "onOpusLinkClearLocal"}} disabled={{opuslinkClearSafety}} class="btn btn-primary" title="Unlink"><i class="fa fa-chain-broken fa-fw"></i> Unlink</button> <label class="directoryopus-link-clearsafety">{{input type="checkbox" checked=opuslinkClearSafety class="toggle"}} Safety</label></p>
-						<p>(This clears both the forum and remote side links for the user.)</p>
-					</div>
-				{{/if}}
-				<div class="directoryopus-link-statrefdiv">
-					<div class="directoryopus-link-linked">
-						<p class="directoryopus-link-linkmain"><span class="directoryopus-link-linkheading">Your forum account is <span class="directoryopus-link-linkstatus">linked</span>:</span> <span class="directoryopus-link-versionsummary">Registered <span class="directoryopus-link-program">Directory Opus</span> <span class="directoryopus-link-version">{{opuslinkLoadResult.link_version}}</span> <span class="{{opuslinkLoadResult.link_edition_class}}">{{opuslinkLoadResult.link_edition}}</span> user.</span></p>
-						{{#if opuslinkLoadResult.link_refresh_have_details}}
-							<div class="directoryopus-link-linkdetails">
-								{{#if opuslinkLoadResult.link_reg_code_redacted}}
-									<span class="directoryopus-link-detailregcode"><span class="directoryopus-link-detailheading">Registration Code:</span> <span class="directoryopus-link-detailvalue">{{opuslinkLoadResult.link_reg_code_redacted}}</span></span>
-								{{/if}}
-								{{#if opuslinkLoadResult.link_reg_date}}
-									<span class="directoryopus-link-detailregdate"><span class="directoryopus-link-detailheading">Registered On:</span> <span class="directoryopus-link-detailvalue">{{opuslinkLoadResult.link_reg_date}}</span></span>
-								{{/if}}
-							</div>
-						{{/if}}
-					</div>
-					<div class="directoryopus-link-butref">
-						<p class="directoryopus-link-refresh"><button {{action "onOpusLinkRefresh"}} disabled={{opuslinkAjaxPending}} class="btn btn-primary" title="{{opuslinkLoadResult.link_refresh_details_title}}">{{#if opuslinkAjaxPending}}<i class="fa fa-refresh fa-fw fa-spin"></i>{{else}}<i class="fa fa-refresh fa-fw"></i>{{/if}} {{opuslinkLoadResult.link_refresh_details_title}}</button></p>
-						{{#if opuslinkLoadResult.link_last_refreshed}}
-							<p class="directoryopus-link-lastrefresh"><span class="directoryopus-nowrap">Last refreshed</span> <span class="directoryopus-nowrap">{{opuslinkLoadResult.link_last_refreshed}}</span></p>
-						{{/if}}
-					</div>
-				</div>
-				<div class="directoryopus-inlineblock">
-					{{#if opuslinkLoadResult.remote_error}}
-						<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">{{opuslinkLoadResult.remote_error}}</span></p>
-					{{/if}}
-				</div>
-			{{else}}
-				{{#if opuslinkIsAdmin}}
-					<div class="directoryopus-link-admin">
-						<p><b>Admin Only</b></p>
-						{{#if opuslinkLoadResult.link_failures}}
-							<p>Invalid code attempts (alphabetical):</p>
-							<ol>
-								Failure list not working due to plugin compilation problem.
-							</ol>
-							<p><button {{action "onOpusLinkClearFailures"}} class="btn btn-primary" title="Clear Failures"><i class="fa fa-trash fa-fw"></i> Clear Failures</button></p>
-							<p>(This clears the user's list of failures and allows them to make more attempts if they were blocked.)</p>
-						{{else}}
-							<p>(No invalid code attempts recorded for this user.)</p>
-						{{/if}}
-					</div>
-				{{/if}}
-				<p class="directoryopus-link-unlinked">Your forum account is <b>not</b> linked to a registered Directory Opus licence.</p>
-				<p>To link your account:</p>
-				<form class="directoryopus-link-form">
-					<div class="directoryopus-link-inputs">
-						<label>Directory Opus registration code: {{input enter="onOpusLinkSubmitRegCode" value=opuslinkRegCodeInput placeholder="e.g. ABC12-DE3FG-4HIJ5-KL6M7" title="Enter your Directory Opus registration code. e.g. ABC12-DE3FG-4HIJ5-KL6M7" pattern="\s*[A-Za-z0-9]{5}-?[A-Za-z0-9]{5}-?[A-Za-z0-9]{5}-?[A-Za-z0-9]{5}(-?[A-Za-z0-9])?\s*" size="32" autocomplete="off" autocorrect="off" autocapitalize="off" required="true"}}</label>
-						<button {{action "onOpusLinkSubmitRegCode"}} disabled={{opuslinkAjaxPending}} class="btn btn-primary" title="Submit">{{#if opuslinkAjaxPending}}<i class="fa fa-spinner fa-fw fa-spin"></i>{{else}}<i class="fa fa-check fa-fw"></i>{{/if}} Submit</button>
-					</div>
-					{{#if opuslinkLoadResult.remote_error}}
-						<p class="directoryopus-link-loaderror">
-							<span class="directoryopus-link-errorheading">Error:</span>
-							<span class="directoryopus-link-errormessage">
-								{{opuslinkLoadResult.remote_error}}
-								{{#if opuslinkRegCodeExample}}
-									<br>Codes should look like: ABC12-DE3FG-4HIJ5-KL6M7
-								{{/if}}
-							</span>
-						</p>
-					{{/if}}
-					<ul class="directoryopus-link-instructions">
-						<li>Use the most recent code we emailed you. New codes (e.g. for upgrades) replace old ones.</li>
-						<li><a href="https://www.gpsoft.com.au/DScripts/lostcode.asp">Lost Registration Retrieval</a> can email your code again.</li>
-						<li>You can normally find your registration code via the program itself.
-							<label class="directoryopus-link-showme">{{input type="checkbox" checked=opuslinkRegCodeShowMe class="toggle"}} Show Me</label>
-							{{#if opuslinkRegCodeShowMe}}
-								<ol>
-									<li>Select <b>Help &gt; Licence Manager</b> near the top-right of the default lister toolbars.</li>
-									<li>Select <b>Current Certificate Status</b> on the left.</li>
-									<li>Select <b><i>Click to reveal details</i></b> and accept the UAC prompt.</li>
-									<li>Click the <b>Copy</b> button. Your registration code will now be in the clipboard.</li>
-								</ol>
-								<video width="640" height="360" controls>
-									<source src="/plugins/discourse-directoryopus/images/opus-link-reg.mp4" type="video/mp4">
-									(Video not supported in your browser.)
-								</video>
-							{{/if}}
-						</li>
-						<li>Free evaluation codes cannot be linked.</li>
-					</ul>
-				</form>
-			{{/if}}
-		{{else}}
-			{{#if opuslinkAjaxPending}}
-				<p class="directoryopus-link-loading">...Please Wait...</p>
-			{{else}}
-				<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">Empty result from server.</span></p>
-			{{/if}}
-		{{/if}}
-	{{else}}
-		{{#if opuslinkAjaxPending}}
-			<p class="directoryopus-link-loading">...Please Wait...</p>
-		{{/if}}
-		<p class="directoryopus-link-getback">
-			You can get back to this page via <span class="link-opus-link">{{i18n "directoryopus.linkopus_title"}}</span> in the top-right menu.
-			<img class="link-opus-menu-shot" src="/plugins/discourse-directoryopus/images/opus_account_link_menu.png" width="334" height="181" alt="[Menu Screenshot]">
-		</p>
-
-		<div class="directoryopus-link-noaccount">
-			<h2>You Are Not Logged In</h2>
-			<ul>
-				<li>If you do not have a forum account, please {{d-button action="showCreateAccount" class="btn-primary btn-small sign-up-button" label="sign_up"}}, then return here.</li>
-				<li>If you already made a forum account, please {{d-button action="showLogin" class="btn-primary btn-small login-button" icon="user" label="log_in"}}.</li>
-			</ul>
-		</div>
-
-		<h2>Forum Accounts</h2>
-		<ul>
-			<li>You need a free forum account to post (but not to read, search or download).</li>
-			<li>If you're evaluating Opus, you are welcome to make a forum account and ask questions.</li>
-			<li>If you own an Opus licence, you can link it to your forum account.</li>
-		</ul>
-	{{/if}}
-
-	<h2>What Account Linking Does</h2>
-	<ul>
-		<li>Linking your Opus licence to your forum account marks your posts as from a registered user.</li>
-		<li>We'll be more likely to give detailed answers and implement your suggestions.</li>
-		<li>We'll know your Opus version (e.g. <i>Opus {{siteSettings.directoryopus_current_version}} Pro</i>). This helps us answer your questions.</li>
-	</ul>
-
-	<h2>What Account Linking Does Not Do</h2>
-	<ul>
-		<li>Simple questions may still be answered before ones requiring research, no matter who each comes from.</li>
-		<li>Linking gives your requests a boost but does not guarantee when or if they will be implemented.</li>
-		<li>The forum's <a href="/faq">Guidelines</a> and <a href="/tos">Terms of Service</a> still apply.</li>
-	</ul>
 </div>
 </div>
