--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -3,5 +3,21 @@
 
 <p>This page is temporarily non-functional to diagnose a problem.</p>
 
+	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
+
+	<h2>What Account Linking Does</h2>
+	<ul>
+		<li>Linking your Opus licence to your forum account marks your posts as from a registered user.</li>
+		<li>We'll be more likely to give detailed answers and implement your suggestions.</li>
+		<li>We'll know your Opus version (e.g. <i>Opus {{siteSettings.directoryopus_current_version}} Pro</i>). This helps us answer your questions.</li>
+	</ul>
+
+	<h2>What Account Linking Does Not Do</h2>
+	<ul>
+		<li>Simple questions may still be answered before ones requiring research, no matter who each comes from.</li>
+		<li>Linking gives your requests a boost but does not guarantee when or if they will be implemented.</li>
+		<li>The forum's <a href="/faq">Guidelines</a> and <a href="/tos">Terms of Service</a> still apply.</li>
+	</ul>
+
 </div>
 </div>
