--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -5,6 +5,32 @@
 
 	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
 
+	{{#if model}}
+	{{else}}
+		{{#if opuslinkAjaxPending}}
+			<p class="directoryopus-link-loading">...Please Wait...</p>
+		{{/if}}
+		<p class="directoryopus-link-getback">
+			You can get back to this page via <span class="link-opus-link">{{i18n "directoryopus.linkopus_title"}}</span> in the top-right menu.
+			<img class="link-opus-menu-shot" src="/plugins/discourse-directoryopus/images/opus_account_link_menu.png" width="334" height="181" alt="[Menu Screenshot]">
+		</p>
+
+		<div class="directoryopus-link-noaccount">
+			<h2>You Are Not Logged In</h2>
+			<ul>
+				<li>If you do not have a forum account, please {{d-button action="showCreateAccount" class="btn-primary btn-small sign-up-button" label="sign_up"}}, then return here.</li>
+				<li>If you already made a forum account, please {{d-button action="showLogin" class="btn-primary btn-small login-button" icon="user" label="log_in"}}.</li>
+			</ul>
+		</div>
+
+		<h2>Forum Accounts</h2>
+		<ul>
+			<li>You need a free forum account to post (but not to read, search or download).</li>
+			<li>If you're evaluating Opus, you are welcome to make a forum account and ask questions.</li>
+			<li>If you own an Opus licence, you can link it to your forum account.</li>
+		</ul>
+	{{/if}}
+
 	<h2>What Account Linking Does</h2>
 	<ul>
 		<li>Linking your Opus licence to your forum account marks your posts as from a registered user.</li>
