--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -6,6 +6,18 @@
 	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
 
 	{{#if model}}
+		{{#if opuslinkLoadError}}
+			{{#if opuslinkAjaxPending}}
+				<p class="directoryopus-link-loading">...Please Wait...</p>
+			{{/if}}
+			<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">{{opuslinkLoadError}}</span></p>
+		{{else}}
+			{{#if opuslinkAjaxPending}}
+				<p class="directoryopus-link-loading">...Please Wait...</p>
+			{{else}}
+				<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">Empty result from server.</span></p>
+			{{/if}}
+		{{/if}}
 	{{else}}
 		{{#if opuslinkAjaxPending}}
 			<p class="directoryopus-link-loading">...Please Wait...</p>
