--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -1,8 +1,6 @@
 <div class="user-content">
 <div class="directoryopus-link-body">
 
-<p>This page is temporarily non-functional to diagnose a problem.</p>
-
 	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
 
 	{{#if model}}
@@ -70,6 +68,8 @@
 				<p class="directoryopus-link-unlinked">Your forum account is <b>not</b> linked to a registered Directory Opus licence.</p>
 				<p>To link your account:</p>
 				<form class="directoryopus-link-form">
+					<div class="directoryopus-link-inputs">
+					</div>
 					{{#if opuslinkLoadResult.remote_error}}
 						<p class="directoryopus-link-loaderror">
 							<span class="directoryopus-link-errorheading">Error:</span>
@@ -81,6 +81,26 @@
 							</span>
 						</p>
 					{{/if}}
+					<ul class="directoryopus-link-instructions">
+						<li>Use the most recent code we emailed you. New codes (e.g. for upgrades) replace old ones.</li>
+						<li><a href="https://www.gpsoft.com.au/DScripts/lostcode.asp">Lost Registration Retrieval</a> can email your code again.</li>
+						<li>You can normally find your registration code via the program itself.
+							<label class="directoryopus-link-showme">{{input type="checkbox" checked=opuslinkRegCodeShowMe class="toggle"}} Show Me</label>
+							{{#if opuslinkRegCodeShowMe}}
+								<ol>
+									<li>Select <b>Help &gt; Licence Manager</b> near the top-right of the default lister toolbars.</li>
+									<li>Select <b>Current Certificate Status</b> on the left.</li>
+									<li>Select <b><i>Click to reveal details</i></b> and accept the UAC prompt.</li>
+									<li>Click the <b>Copy</b> button. Your registration code will now be in the clipboard.</li>
+								</ol>
+								<video width="640" height="360" controls>
+									<source src="/plugins/discourse-directoryopus/images/opus-link-reg.mp4" type="video/mp4">
+									(Video not supported in your browser.)
+								</video>
+							{{/if}}
+						</li>
+						<li>Free evaluation codes cannot be linked.</li>
+					</ul>
 				</form>
 			{{/if}}
 		{{else}}
@@ -128,6 +148,5 @@
 		<li>Linking gives your requests a boost but does not guarantee when or if they will be implemented.</li>
 		<li>The forum's <a href="/faq">Guidelines</a> and <a href="/tos">Terms of Service</a> still apply.</li>
 	</ul>
-
 </div>
 </div>
