--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -142,7 +142,7 @@
 	<ul>
 		<li>Linking your Opus licence to your forum account marks your posts as from a registered user.</li>
 		<li>We'll be more likely to give detailed answers and implement your suggestions.</li>
-		<li>We'll know your Opus version (e.g. <i>Opus {{siteSettings.directoryopus_current_version}} Pro</i>). This helps us answer your questions.</li>
+		<li>We'll know your Opus version (e.g. <i>Opus {{this.siteSettings.directoryopus_current_version}} Pro</i>). This helps us answer your questions.</li>
 	</ul>
 
 	<h2>What Account Linking Does Not Do</h2>
