--- a/assets/javascripts/discourse/templates/connectors/composer-fields/directoryopus-composer-help.hbs
+++ b/assets/javascripts/discourse/templates/connectors/composer-fields/directoryopus-composer-help.hbs
@@ -1,8 +1,8 @@
-{{#if siteSettings.directoryopus_enabled}}
-	{{#if siteSettings.directoryopus_composer_help_title}}
-		{{#if siteSettings.directoryopus_composer_help_url}}
+{{#if this.siteSettings.directoryopus_enabled}}
+	{{#if this.siteSettings.directoryopus_composer_help_title}}
+		{{#if this.siteSettings.directoryopus_composer_help_url}}
 			<div class="directoryopus-composer-help">
-				<a href="{{siteSettings.directoryopus_composer_help_url}}">{{d-icon 'info-circle'}} {{siteSettings.directoryopus_composer_help_title}}</a>
+				<a href="{{this.siteSettings.directoryopus_composer_help_url}}">{{d-icon 'info-circle'}} {{this.siteSettings.directoryopus_composer_help_title}}</a>
 			</div>
 		{{/if}}
 	{{/if}}
