siteSettings -> this.siteSettings

--- a/assets/javascripts/discourse/templates/connectors/user-card-post-names/directoryopus-link-status-card.hbs
+++ b/assets/javascripts/discourse/templates/connectors/user-card-post-names/directoryopus-link-status-card.hbs
@@ -1,4 +1,4 @@
-{{#if siteSettings.directoryopus_enabled}}
+{{#if this.siteSettings.directoryopus_enabled}}
 	{{#if opusLinkAnything}}
 		<div class="directoryopus-link-status">
 			{{#if opusLinkClass}}
