--- a/assets/javascripts/discourse/templates/connectors/user-profile-primary/directoryopus-link-status-profile.hbs
+++ b/assets/javascripts/discourse/templates/connectors/user-profile-primary/directoryopus-link-status-profile.hbs
@@ -1,4 +1,4 @@
-{{#if siteSettings.directoryopus_enabled}}
+{{#if this.siteSettings.directoryopus_enabled}}
 	{{#if opusLinkAnything}}
 		<div class="directoryopus-link-status">
 			{{#if opusLinkClass}}
